# react-rust-gpt3-example

./: README.md  package-lock.json  package.json  vite.config.ts
API/: .gitignore  Cargo.toml  Shuttle.toml
API/src/: lib.rs  main.rs  router.rs
API/static/: index.html
API/static/assets/: index-512c28e6.js  index-7a8bf29b.js  index-b4152396.js  index-b5a6c936.js  index-cbf42d34.css  index-d43c1ad8.css
src/: App.tsx
