[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.10"
axum-extra = { version = "0.5.0", features = ["spa"] }
axum-macros = "0.3.4"
openai-api = "0.1.4"
serde = { version = "1.0.152", features = ["derive"] }
shuttle-axum = { version = "0.13.0" }
shuttle-runtime = { version = "0.13.0" }
shuttle-secrets = "0.13.0"
shuttle-static-folder = "0.13.0"
tokio = { version = "1.26.0" }
